--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@sourcegraph/webapp",
+  "private": true,
   "version": "1.10.1",
   "description": "The Sourcegraph web app",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register --require src/util/long-stack-traces.ts --timeout 10000 'src/**/*.test.ts?(x)'",
     "cover": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc --require ts-node/register mocha --timeout 10000 './src/**/*.test.ts?(x)'",
     "test-e2e": "cross-env OVERRIDE_AUTH_SECRET=sSsNGlI8fBDftBz0LDQNXEnP6lrWdt9g0fK6hoFvGQ TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register --require ./src/util/long-stack-traces.ts --timeout 60000 --slow 5000 --exit './src/**/*.test.e2e.ts?(x)'",
+    "test-e2e-sgdev": "env OVERRIDE_AUTH_SECRET=${SGDEV_OVERRIDE_AUTH_SECRET} TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha --require ts-node/register --require esm --require @sourcegraph/webapp/dist/util/long-stack-traces --timeout 60000 --slow 5000 --exit './src/**/*.test.e2e.ts?(x)'",
     "build": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096\" gulp build",
     "watch": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096\" gulp watch",
     "watch-webpack": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096\" gulp watchWebpack",
@@ -72,6 +74,7 @@
     "@slimsag/react-shortcuts": "^1.2.1",
     "@sourcegraph/codeintellify": "^3.9.0",
     "@sourcegraph/extensions-client-common": "^10.3.1",
+    "@sourcegraph/phabricator-extension": "^1.18.0",
     "@sqs/jsonc-parser": "^1.0.3",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.8",
@@ -113,6 +116,7 @@
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-stripe-elements": "^2.0.1",
     "react-visibility-sensor": "^4.0.0",
     "reactstrap": "^6.2.0",
     "rxjs": "^6.3.2",
@@ -164,6 +168,7 @@
     "@types/plugin-error": "0.1.0",
     "@types/pretty-bytes": "5.1.0",
     "@types/puppeteer": "1.6.3",
+    "@types/react-stripe-elements": "^1.1.7",
     "@types/reactstrap": "6.4.0",
     "@types/semver": "5.5.0",
     "@types/textarea-caret": "3.0.0",
