--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@gql2ts/from-schema": "^1.10.1",
     "@sourcegraph/prettierrc": "^2.2.0",
     "@sourcegraph/stylelint-config": "^1.0.1",
@@ -193,7 +194,7 @@
     "latest-version": "^4.0.0",
     "mocha": "^5.0.0",
     "mz": "^2.7.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.4",
     "node-sass-import-once": "^1.2.0",
     "nyc": "^13.0.1",
     "plugin-error": "^1.0.1",
