--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       }
     ]
   },
-  "include": ["src/**/*", "*.ts"],
+  "include": ["src/**/*", "enterprise/src/**/*", "*.ts"],
   "exclude": ["node_modules"]
 }
