--- a/enterprise/dev/Procfile
+++ b/enterprise/dev/Procfile
@@ -11,7 +11,7 @@ lsp-proxy: ./enterprise/dev/delve-hook lsp-proxy
 xlang-go: ./enterprise/dev/delve-hook xlang-go -mode=tcp -addr=:4389
 frontend: ./enterprise/dev/delve-hook frontend
 watch: ./enterprise/dev/changewatch.sh
-web: ./node_modules/.bin/gulp --color watch
+web: ENTERPRISE=1 ./node_modules/.bin/gulp --color watch
 syntect_server: ./enterprise/dev/syntect_server
 zoekt-indexserver: ./dev/zoekt-wrapper zoekt-sourcegraph-indexserver -sourcegraph_url http://localhost:3090 -index $HOME/.sourcegraph/zoekt/index -interval 1m -listen :6072
 zoekt-webserver: ./dev/zoekt-wrapper zoekt-webserver -index $HOME/.sourcegraph/zoekt/index -pprof -rpc
